--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -7,7 +7,8 @@
     width: 200px; /* عرض ثابت برای کارت‌ها */
     background-color: #fff; /* رنگ پس‌زمینه کارت */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* سایه برای عمق بیشتر */
-    transition: transform 0.2s; /* انیمیشن برای افکت هاور */
+
+    transition: transform 0.2s; /*  برای افکت هاور */
 }
 
 .product-card:hover {
